# simplecpp

./: ARCHITECTURAL_RULES.md  CASTING.md  DESIGN_NOTES.md  OBJECT_COMPARISON.md  OPERATOR_GRID_EXHAUSTIVE.md  PHP_MAPPING.md  README.md  RUNTIME_CODING_RULES.md  RUNTIME_DESIGN_NOTE.md  RUNTIME_INDEX.md  RUNTIME_REQUIREMENTS.md  SEMANTIC_MATRIX.md  SEMANTIC_MATRIX_LANGUAGE_COMPARISON.md  SPECIFICATION.md  SPECIFICATIONS.md  TEST_COVERAGE.md  TEST_MATRIX.md  test_compile.cpp  todo.md
generator/: cpp.php  cpp_1.php  from_php.php
php_generator/samples/: 01_literals_and_assignments.php  01_literals_and_assignments.php.json  02_functions_basic.php  02_functions_basic.php.json  03_namespace_exec_ok.php  03_namespace_exec_ok.php.json  04_namespace_nested_decl_only.php  04_namespace_nested_decl_only.php.json  05_class_basic.php  05_class_basic.php.json  06_class_static_access.php  06_class_static_access.php.json  07_typed_locals_phpdoc.php  07_typed_locals_phpdoc.php.json  08_references.php  08_references.php.json  09_constants_and_strings.php  09_constants_and_strings.php.json  10_negative_cases.php.json  EXPECTED_STDOUT.md  README.md
php_generator/specs/: StrLComp.md  catalog.md  (+9 more)
public_html/: functions.php  index.php  index_1.php  master_specs.csv
runtime/: CMakeLists.txt  README.md
runtime/include/scpp/: bool_t.hpp  cast.hpp  detail.hpp  float_t.hpp  int_t.hpp  memory.hpp  null_t.hpp  nullable.hpp  nullopt_t.hpp  nullptr_t.hpp  php.hpp  ref_p.hpp  runtime.hpp  sentinel_ops.hpp  shared_p.hpp  string_t.hpp  unique_p.hpp  value_p.hpp  vector_t.hpp  weak_p.hpp
runtime/specs/: config.json  config.review.md  runtime_generation_guidelines.md  spec.md
runtime/src/: runtime.cpp
runtime/tests/: CMakeLists.txt  test_common.hpp  test_contract.cpp  test_core.cpp  test_integration.cpp  test_nullable.cpp  test_pointers.cpp  test_sentinels.cpp  test_value_ref.cpp
tests/: run_fail_compile.sh  run_pass.sh
v2/: ARCHITECTURAL_RULES.md  DERIVATION_RULES.md  DESIGN_NOTES.md  README.md  RUNTIME_API_CONTRACT.md  RUNTIME_CODING_RULES.md  RUNTIME_DESIGN_NOTE.md  RUNTIME_INDEX.md  RUNTIME_REQUIREMENTS.md  SEMANTIC_MATRIX.md  SPECIFICATIONS.md  TEST_COVERAGE.md  TEST_MATERIALIZATION_CONTRACT.md  TEST_MATRIX.md  TYPE_FAMILY_REGISTRY.md
(+441 files in other folders)
